      optimoptions function for setting Optimization Toolbox
      options (Optimization Toolbox 6.3 +), respectively.
    - Added handling of NaN values to t_is().
    - INCOMPATIBLE CHANGE: Removed use of 'ot_opts' field and
      replaced with 'linprog_opts' and 'quadprog_opts' fields
      in the OPT argument to qps_matpower() and qps_ot().

10/10/14
    - Added 'sqp' algorithm option for fmincon.alg, not suitable
      for large problems.

10/7/14
    - Added toggle_softlims(), an extension to implement DC OPF
      branch flow soft limits. This should be useful in identifying
      the cause of infeasibility in some infeasible DC OPF problems.
      See 'help toggle_softlims' for details.

9/24/14
    - Fixed issue with failed tests in t_psse() on Windoze.

8/11/14
    - Modified savecase() to save fields bus_name and genfuel
      (both cell arrays of strings) if present. This is an
      experimental feature and the design may change in future
      versions.
    - Optionally return success flag from t_ok() and t_is().

8/4/14
    - Additional improvements to correctly handling PSS/E RAW
      files for revisions 24-28.

7/30/14
    - Fixed a bug in psse_convert() that resulted in incorrect
      bus voltage angles when importing from v29 or v30 files.
    - Enhanced PSS/E import code to handle additional versions
      prior to v29, improve reporting of version being used
      for parsing. Default version when not explicit is now v23.

7/24/14
    - Added line to cplex_options() to prevent default creation
      of clone1.log files when using parallel CPLEX routines
      (only effective for CPLEX 12.6.0.1 or later).
    - Fixed fatal error when uopf() shuts down all gens
      attempting to satisfy Pmin limits.

7/23/14
    - Fixed error in User's Manual description of LODF and
      further clarified text.


Changes since 4.1
-----------------

7/1/14
    - Released version 5.0b1.

6/27/14
    - Added support for LP solver GLPK which is built-in to